Major fixes and additions Fixed alignment of navbar sandwich Added favicon Adjusted hero visibility Began projects category and added a few cards

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,8 @@ body::-webkit-scrollbar-track {
     background-color: darkgray;
 }
 body::-webkit-scrollbar-thumb {
-    background-color: black;
+    background-color: #2F2F2F;
+    opacity: 0.9;
     outline: none;
     border: none;
 }
