--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,5 @@
 .hero {
     z-index: 0;
-    /* top: 0;
-    position: absolute; */
     width: 100%;
     height: 100vh;
     background-color: gray;
@@ -20,20 +18,44 @@
     border-radius: 15px;
     padding: 25px;
     user-select: none;
+    backdrop-filter: blur(2px);
+    box-shadow: 2px 2px 15px rgba(255, 255, 255, 0.6);
+}
+.hero-cont h2 {
+    font-size: 1.25em;
 }
 .hero-cont > * { margin: 7.5px; }
-#hero-btn {
+#hero-btn, .proj-btn {
     border-radius: 15px;
     padding: 10px;
     border: none;
     font-size: 1.2rem;
     margin: 5px;
     background-color: black;
+    position: relative;
     color: white;
 }
-#hero-btn:hover {
+#hero-btn:hover, .proj-btn:hover {
     background-color: darkblue;
-    text-decoration: underline;
+}
+#hero-btn::after, .proj-btn::after {
+    content: "";
+    display: inline-block;
+    opacity: 0;
+    transform: translateX(-10px);
+    padding: 1px;
+    transition: opacity 0.3s ease, transform 0.3s ease, padding 0s ease;
+}
+#hero-btn:hover::after, .proj-btn:hover::after {
+    content: "➤";
+    opacity: 1;
+    padding: 0px;
+    transform: translateX(2.5px);
+}
+.proj-btn {
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 12px;
 }
 
 .stars {
@@ -54,14 +76,52 @@
 .card {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: minmax(auto, 100px);
+    min-height: fit-content;
     height: 100vh;
     padding: 2.5em;
+    background-color: #eee;
 }
-.c-span {
+.c-span, .c-proj {
+    height: fit-content;
     text-align: center;
     grid-column: span 2;
 }
-.c-head {
-    font-size: 3rem;
+.c-head { font-size: 3rem; }
+.c-proj {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: space-around;
+    gap: 10px;
+    margin-top: 1.5em;
+}
+
+.proj-card {
+    background-color: #fff;
+    padding: 6px;
+    border-radius: 15px;
+    display: flex;
+    box-shadow: 10px 10px 50px gray;
+}
+.proj-card > * { margin: 6px; }
+.proj-thumbnail { width: fit-content; align-self: center; margin-right: 20px;}
+.proj-thumbnail-img { width: 100px; filter: brightness(0) saturate(100%); }
+.proj-desc > p { text-align: left; }
+.proj-desc > h3 { font-size: 1.5em; margin: 6px; }
+
+@media (max-width: 786px) {
+    .card {
+        grid-template-columns: 1fr;
+        grid-template-rows: minmax(auto, 100px);
+    }
+    .c-span, .c-proj {
+        grid-column: span 1;
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 550px) {
+    .proj-card { flex-direction: column;  margin: 6px; }
+    .proj-thumbnail { margin: 0 auto; }
 }
