--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -37,6 +37,8 @@
     font-size: 2em;
     color: #fff;
     cursor: pointer;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 @media (max-width: 768px) {
